(library
 (name matita_cli)
 (wrapped false)
 (libraries helm_grafite_engine lablgtk3-sourceview3 dune-build-info dune-site)
 (modules 
   mysites buildTimeConf matitaTypes matitaMiscCli applyTransformation matitaEngine matitaExcPp matitaInit))

(generate_sites_module
 (module mysites)
 (sites matita))

(rule
 (target matitaGeneratedGui.ml)
 (deps matita.ui)
 (mode (promote))
 (action (with-stdout-to %{target} (run lablgladecc3 -embed %{deps}))))

(executable
 (name matita)
 (public_name matita)
 (promote (until-clean))
 (libraries matita_cli)
 (modules_without_implementation matitaGuiTypes)
 (modules
   matitaGuiInit matitaGeneratedGui lablGraphviz matitaGuiTypes matitaMisc matitaGtkMisc virtuals cicMathView predefined_virtuals matitaMathView matitaScript matitaGui matita))

(executables
 (names matitac matitaclean)
 (public_names matitac matitaclean)
 (promote (until-clean)) 
 (libraries matita_cli)
 (modules matitac matitaclean))

(install
 (section (site (matita myshare)))
 (files
  (glob_files_rec lib/*)
  (glob_files_rec help/C/*.xml)
  (glob_files_rec help/C/figures/*)
  (glob_files_rec icons/*)
  matita.gtkrc
  matita.lang
  matita.ma.templ
  matita.conf.xml
  closed.xml
  AUTHORS
  LICENSE))

(env
  (_
    (flags (:standard -thread -rectypes -w @A-52-4-34-37-45-9-44-48-6-32-20-58-7-57-3-68-69-70-50-29)))) ; -29 for non portable strings
