(library
 (name helm_getter)
 (libraries http unix pcre helm_xml helm_logger helm_ng_kernel helm_registry)
 (preprocess (action (system "camlp5o %{input-file}")))
 (wrapped false)
 (modules (:standard \ test)))
(env
  (_
    (flags (:standard -rectypes -w @A-52-4-34-37-45-9-44-48-6-32-20-58-7-57-3-68-69-70-50))))
