(ocamllex macLexer)

(executable
  (name probe)
  (public_name probe)
  (promote (until-clean))
  (libraries helm_ng_library)
  (modules_without_implementation)
  (modules macLexer engine error matitaRemove nCicScan matitaList options probe)
)

(env
  (_
    (flags (:standard -thread -rectypes -w @A-52-4-34-37-45-9-44-48-6-32-20-58-7-57-3-68-69-70-50-29)))) ; -29 for non portable strings
          
